--- a/src/stylesheet/App.css
+++ b/src/stylesheet/App.css
@@ -3,6 +3,13 @@
     padding: 0;
     box-sizing: border-box;
   }
+
+  .app-title-container {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    margin-bottom: 15px;;
+  }
   
   body {
     font-family: 'Montserrat', sans-serif;
@@ -22,8 +29,10 @@
   }
   
   .search-box {
+    display: flex;
     width: 100%;
     margin: 0 0 75px;
+    justify-content: center;
   }
   
   .search-box .search-bar {
@@ -37,8 +46,9 @@
     outline: none;
   
     background-color: rgba(255, 255, 255, 0.5);
-    border-radius: 0px 0px 16px 16px;
+    border-radius: 20px;
     margin-top: -25px;
+    width: 30vw;
   
     box-shadow: 0px 5px rgba(0, 0, 0, 0.2);
     
